--- a/coursereg.css
+++ b/coursereg.css
@@ -15,7 +15,7 @@
 }
 
 input {
-  height: 40px;
+  height: 20px;
   border-radius: 2px;
   border: solid 1px #c5cede;
   font-size: 14px;
@@ -34,4 +34,5 @@ button {
   line-height: 1.5;
   color: #ffffff;
   text-transform: uppercase;
+  cursor: pointer;
 }
